--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -825,6 +825,11 @@
     <Content Include="Pages\02YiYongZhiPin\08YiYongCaiLiao\SCYX0208003\FlowCreate.html" />
     <Content Include="Pages\02YiYongZhiPin\08YiYongCaiLiao\SCYX0208003\FlowDoneDetail.html" />
     <Content Include="Pages\02YiYongZhiPin\08YiYongCaiLiao\SCYX0208003\FlowUndoDetail.html" />
+    <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001\common.js" />
+    <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001\FlowAskDetail.html" />
+    <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001\FlowCreate.html" />
+    <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001\FlowDoneDetail.html" />
+    <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001\FlowUndoDetail.html" />
     <Content Include="Pages\06ShengWuKeJi\02JieLiKang\BG0602004\common.js" />
     <Content Include="Pages\06ShengWuKeJi\02JieLiKang\BG0602004\FlowAskDetail.html" />
     <Content Include="Pages\06ShengWuKeJi\02JieLiKang\BG0602004\FlowCreate.html" />
@@ -1233,7 +1238,6 @@
     <Folder Include="Pages\03GuKeCaiLiao\01KuaZiGongSi\" />
     <Folder Include="Pages\04XueYeJingHua\" />
     <Folder Include="Pages\05YaoYe\00YaoYeBenBu\" />
-    <Folder Include="Pages\05YaoYe\01KuaZiGongSi\" />
     <Folder Include="Pages\05YaoYe\02BaoLing\" />
     <Folder Include="Pages\06ShengWuKeJi\00ShengWuKeJiBenBu\" />
     <Folder Include="Pages\06ShengWuKeJi\01KuaZiGongSi\" />
