--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -488,11 +488,31 @@
     <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102001\FlowCreate.html" />
     <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102001\FlowDoneDetail.html" />
     <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102001\FlowUndoDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102002\common.js" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102002\FlowAskDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102002\FlowCreate.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102002\FlowDoneDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102002\FlowUndoDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102003\common.js" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102003\FlowAskDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102003\FlowCreate.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102003\FlowDoneDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CG0102003\FlowUndoDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CW0102001\common.js" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CW0102001\FlowAskDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CW0102001\FlowCreate.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CW0102001\FlowDoneDetail.html" />
+    <Content Include="Pages\01WeGoHQ\02LvYouCanYin\CW0102001\FlowUndoDetail.html" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103001\common.js" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103001\FlowAskDetail.html" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103001\FlowCreate.html" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103001\FlowDoneDetail.html" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103001\FlowUndoDetail.html" />
+    <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103002\common.js" />
+    <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103002\FlowAskDetail.html" />
+    <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103002\FlowCreate.html" />
+    <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103002\FlowDoneDetail.html" />
+    <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\BG0103002\FlowUndoDetail.html" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\CG0103001\common.js" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\CG0103001\FlowAskDetail.html" />
     <Content Include="Pages\01WeGoHQ\03WeiHaiWeiDaSha\CG0103001\FlowCreate.html" />
