--- a/BPMMobile/Web.config
+++ b/BPMMobile/Web.config
@@ -47,7 +47,7 @@
     <add key="eid" value="102" />
     <add key="keyFile" value="102.key" />
     <add key="BPMUrl" value="http://172.16.7.8/BPM/"/>
-    <add key="BPMIcon" value="../../../../Content/images/yi-icos.png"/>
+    <add key="BPMIcon" value="../../../../Content/images/5.png"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
