--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -887,6 +887,11 @@
     <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201001\FlowCreate.html" />
     <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201001\FlowDoneDetail.html" />
     <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201001\FlowUndoDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201002\common.js" />
+    <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201002\FlowAskDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201002\FlowCreate.html" />
+    <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201002\FlowDoneDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\XZBG0201002\FlowUndoDetail.html" />
     <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\ZLGL0201001\common.js" />
     <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\ZLGL0201001\FlowAskDetail.html" />
     <Content Include="Pages\02YiYongZhiPin\01KuaZiGongSi\ZLGL0201001\FlowCreate.html" />
