--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -1036,6 +1036,26 @@
     <Content Include="Pages\02YiYongZhiPin\08YiYongCaiLiao\SCYX0208003\FlowCreate.html" />
     <Content Include="Pages\02YiYongZhiPin\08YiYongCaiLiao\SCYX0208003\FlowDoneDetail.html" />
     <Content Include="Pages\02YiYongZhiPin\08YiYongCaiLiao\SCYX0208003\FlowUndoDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209001\common.js" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209001\FlowAskDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209001\FlowCreate.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209001\FlowDoneDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209001\FlowUndoDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209002\common.js" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209002\FlowAskDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209002\FlowCreate.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209002\FlowDoneDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209002\FlowUndoDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209005\common.js" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209005\FlowAskDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209005\FlowCreate.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209005\FlowDoneDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209005\FlowUndoDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209006\common.js" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209006\FlowAskDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209006\FlowCreate.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209006\FlowDoneDetail.html" />
+    <Content Include="Pages\02YiYongZhiPin\09JieLiKang\CW0209006\FlowUndoDetail.html" />
     <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001G2\common.js" />
     <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001G2\FlowAskDetail.html" />
     <Content Include="Pages\05YaoYe\01KuaZiGongSi\SCYX0501001G2\FlowCreate.html" />
@@ -1062,6 +1082,11 @@
     <Content Include="Pages\06ShengWuKeJi\02JieLiKang\BG0602006\FlowCreate.html" />
     <Content Include="Pages\06ShengWuKeJi\02JieLiKang\BG0602006\FlowDoneDetail.html" />
     <Content Include="Pages\06ShengWuKeJi\02JieLiKang\BG0602006\FlowUndoDetail.html" />
+    <Content Include="Pages\06ShengWuKeJi\03YiLiaoXiTong\CGGL0603001\common.js" />
+    <Content Include="Pages\06ShengWuKeJi\03YiLiaoXiTong\CGGL0603001\FlowAskDetail.html" />
+    <Content Include="Pages\06ShengWuKeJi\03YiLiaoXiTong\CGGL0603001\FlowCreate.html" />
+    <Content Include="Pages\06ShengWuKeJi\03YiLiaoXiTong\CGGL0603001\FlowDoneDetail.html" />
+    <Content Include="Pages\06ShengWuKeJi\03YiLiaoXiTong\CGGL0603001\FlowUndoDetail.html" />
     <Content Include="Pages\07FangDiChan\01KuaZiGongSi\CW0701001\FlowAskDetail.html" />
     <Content Include="Pages\07FangDiChan\01KuaZiGongSi\CW0701001\FlowCreate.html" />
     <Content Include="Pages\07FangDiChan\01KuaZiGongSi\CW0701001\FlowDoneDetail.html" />
