--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -1283,6 +1283,21 @@
     <Content Include="Pages\98SGWeeklyFlow\FlowCreate.html" />
     <Content Include="Pages\98SGWeeklyFlow\FlowDoneDetail.html" />
     <Content Include="Pages\98SGWeeklyFlow\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901001\common.js" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901001\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901001\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901001\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901001\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901002\common.js" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901002\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901002\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901002\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901002\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\common.js" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowUndoDetail.html" />
     <Content Include="Pages\99ZPFY002\common.js" />
     <Content Include="Pages\99ZPFY002\FlowAskDetail.html" />
     <Content Include="Pages\99ZPFY002\FlowCreate.html" />
@@ -1406,6 +1421,11 @@
     <Content Include="Pages\JRPrototype\FlowCreate.html" />
     <Content Include="Pages\JRPrototype\FlowDoneDetail.html" />
     <Content Include="Pages\JRPrototype\FlowUndoDetail.html" />
+    <Content Include="Pages\WeeklyFlow2\common.js" />
+    <Content Include="Pages\WeeklyFlow2\FlowAskDetail.html" />
+    <Content Include="Pages\WeeklyFlow2\FlowCreate.html" />
+    <Content Include="Pages\WeeklyFlow2\FlowDoneDetail.html" />
+    <Content Include="Pages\WeeklyFlow2\FlowUndoDetail.html" />
     <Content Include="Pages\WeeklyFlow\FlowAskDetail.html" />
     <Content Include="Pages\WeeklyFlow\FlowCreate.html" />
     <Content Include="Pages\WeeklyFlow\FlowDoneDetail.html" />
