--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -377,6 +377,31 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <None Include="gulpfile.js" />
+    <Content Include="Pages\00KCY\BG001604\common.js" />
+    <Content Include="Pages\00KCY\BG001604\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\BG001604\FlowCreate.html" />
+    <Content Include="Pages\00KCY\BG001604\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\BG001604\FlowUndoDetail.html" />
+    <Content Include="Pages\00KCY\BG001605\common.js" />
+    <Content Include="Pages\00KCY\BG001605\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\BG001605\FlowCreate.html" />
+    <Content Include="Pages\00KCY\BG001605\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\BG001605\FlowUndoDetail.html" />
+    <Content Include="Pages\00KCY\BG001606\common.js" />
+    <Content Include="Pages\00KCY\BG001606\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\BG001606\FlowCreate.html" />
+    <Content Include="Pages\00KCY\BG001606\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\BG001606\FlowUndoDetail.html" />
+    <Content Include="Pages\00KCY\BG001607\common.js" />
+    <Content Include="Pages\00KCY\BG001607\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\BG001607\FlowCreate.html" />
+    <Content Include="Pages\00KCY\BG001607\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\BG001607\FlowUndoDetail.html" />
+    <Content Include="Pages\00KCY\BG001608\common.js" />
+    <Content Include="Pages\00KCY\BG001608\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\BG001608\FlowCreate.html" />
+    <Content Include="Pages\00KCY\BG001608\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\BG001608\FlowUndoDetail.html" />
     <Content Include="Pages\00KCY\HQ000701\common.js" />
     <Content Include="Pages\00KCY\HQ000701\FlowAskDetail.html" />
     <Content Include="Pages\00KCY\HQ000701\FlowCreate.html" />
@@ -1539,6 +1564,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\upload.detail.js" />
     <Content Include="Scripts\upload.js" />
+    <Content Include="Scripts\uploadOpt.js" />
     <Content Include="Scripts\util.js" />
     <Content Include="Scripts\vconsole.min.js" />
     <Content Include="Scripts\vue.min.js" />
