--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -1363,6 +1363,31 @@
     <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowCreate.html" />
     <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowDoneDetail.html" />
     <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302003\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302003\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302003\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302003\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302003\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302004\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302004\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302004\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302004\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302004\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302007\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302007\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302007\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302007\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302007\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYYS990301002\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYYS990301002\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYYS990301002\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYYS990301002\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYYS990301002\FlowUndoDetail.html" />
     <Content Include="Pages\99ZPFY002\common.js" />
     <Content Include="Pages\99ZPFY002\FlowAskDetail.html" />
     <Content Include="Pages\99ZPFY002\FlowCreate.html" />
